--- a/J_Ketcham_AdvancedViews/app/src/main/AndroidManifest.xml
+++ b/J_Ketcham_AdvancedViews/app/src/main/AndroidManifest.xml
@@ -9,11 +9,10 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".JKetcham_AdvancedViews"
-            android:configChanges= "orientation|screenSize|keyboardHidden"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
