--- a/JKConnectedApp/app/build.gradle
+++ b/JKConnectedApp/app/build.gradle
@@ -21,4 +21,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile files('libs/android-smart-image-view-1.0.0.jar')
+    compile files('libs/commons-io-2.4.jar')
 }
